--- a/code/package.json
+++ b/code/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "patch-package"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1",
+    "patch-package": "^6.4.7",
     "three": "^0.131.3"
   }
 }
