--- a/code/package.json
+++ b/code/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "mysql": "^2.18.1",
     "patch-package": "^6.4.7",
+    "socket.io": "^4.1.3",
     "three": "^0.131.3"
   }
 }
